--- a/TODO
+++ b/TODO
@@ -43,3 +43,10 @@ https://github.com/alrra/dotfiles
 https://github.com/donnemartin/dev-setup
 https://github.com/paulirish/dotfiles
 https://github.com/webpro/awesome-dotfiles
+
+
+# Alfred
+Turn on sync with Dropbox
+Set hotkey to ⌘space
+
+# Xtrafinder SIP Error
